# thunderforge-vst

./: .gitignore  .gitmodules  CMakeLists.txt  DEVOPS_AI_MANAGEMENT.md  Dockerfile  README.md  build_test.sh  plan_update.md  plan_update_2.md  presets.json  test_build.sh  test_plan.md
.gemini/antigravity/brain/: task.md
Assets/: presets.json
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h  presets.json
Source/Core/: PresetManager.cpp  PresetManager.h
Source/DSP/: CabinetSim.h  Chorus.h  Compressor.h  NAMProcessor.h  NoiseGate.h  PlateReverb.h  StereoDelay.h  ToneStack.h  TubeScreamer.h  WaveShaper.h
Source/Data/: presets.json
Source/GUI/Components/: AmpFaceComponent.h  KnobComponent.h  LCDComponent.h  LEDComponent.h  SignalChainComponent.h  StatusBarComponent.h  VU_Meter.h
Source/GUI/LookAndFeel/: ThunderforgeLookAndFeel.h
modules/lh_thunderforge/: lh_thunderforge.cpp  lh_thunderforge.h
modules/lh_thunderforge/Components/: AmpFaceComponent.h  KnobComponent.h  LCDComponent.h  LEDComponent.h  SignalChainComponent.h  StatusBarComponent.h  VU_Meter.h
modules/lh_thunderforge/LookAndFeel/: ThunderforgeLookAndFeel.cpp  ThunderforgeLookAndFeel.h
scripts/: install.sh  update.sh
